# wc-bet-predictor

./: .gitignore  DESIGN.md  README.md  build.sh
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: api.rs  cache.rs  domain.rs  ledger.rs  lib.rs  main.rs  polymarket.rs  predictor.rs  source.rs  sporttery.rs  static_assets.rs
backend/tests/: api_flow.rs
docs/superpowers/plans/: 2026-06-16-wc-bet-predictor.md
docs/superpowers/specs/: 2026-06-16-wc-bet-predictor-design.md
examples/: warm.rs
frontend/: app.html  index.html  package.json  vite.config.ts
frontend/src/: api.ts  app.ts  landing.ts  main.ts  style.css
src/: api.rs  cache.rs  config.rs  domain.rs  ledger.rs  predictor.rs  source.rs  sporttery.rs  static_assets.rs
tests/: api_flow.rs
web/: app.html  index.html  package.json  tsconfig.json
web/src/: app.css  app.ts  landing.css  landing.ts  layout.ts  types.ts
