[package]
name = "wc-bet-predictor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
