[package]
name = "wc-bet-predictor"
version = "0.1.0"
edition = "2021"

[lib]
name = "wc_bet_predictor"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1"
rust-embed = "8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
